# rust-scratch

./: .editorconfig  CLAUDE.md  Cargo.toml  README.md
address-book-with-redux/: Cargo.toml  README.md  TODO  run.fish  state.json
address-book-with-redux/sample_data/: await-local-api.data.json  fakename-com.data.json  httpbin-org.data.json
address-book-with-redux/src/: lib.rs  main.rs
address-book-with-redux/src/address_book/: actions.rs  contact.rs  mod.rs  reducer.rs  state.rs
address-book-with-redux/src/json_rpc/: awair_local_api.rs  fake_contact_data_api.rs  get_ip_api.rs  make_api_call_for.rs  mod.rs
address-book-with-redux/src/redux/: mod.rs  mt_store.rs  state_manager.rs  store.rs  store_data.rs  store_data_impl.rs  store_dispatch.rs  store_guard.rs  store_impl.rs  store_middleware.rs  store_reducers.rs  store_subscribers.rs
address-book-with-redux/src/tui/: constants.rs  middleware.rs  mod.rs  renderer.rs  repl_loop.rs
address-book-with-redux/tests/: redux_test.rs  test_async_trait.rs  test_future.rs
async_con_par/: Cargo.toml  README.md
async_con_par/src/: async_stream.rs  build_a_timer_future_using_waker.rs  build_an_executor_to_run_future.rs  demo_join_select_spawn.rs  lib.rs  local_set.rs  non_blocking_async_event_loops.rs
clap/: Cargo.toml  README.md
clap/src/: main.rs
graphemes/: Cargo.toml  README.md  TODO.todo  cargo-watch-all-tests.fish  cargo-watch-macro-expand-one-test.fish  cargo-watch-one-test.fish  run.fish  run_prod.fish
graphemes/src/: graphemes.rs  lib.rs  main.rs  unicode_string_ext.rs
graphemes/tests/: test_unicode_string_ext.rs
kv_example/: .gitignore  Cargo.toml  README.md  TODO.todo
kv_example/src/: data.rs  data_types.rs  errors.rs  lib.rs  miette_error_test_cases.rs  utils.rs
macros/: Cargo.toml  README.md  TODO  run.fish  rustfmt.toml
macros/my_proc_macros_lib/: Cargo.toml
macros/my_proc_macros_lib/src/: ast_viz_debug.rs  builder.rs  custom_syntax.rs  debug_token_stream_fn_like_macro.rs  derive_macro_describe.rs  describe.rs  fn_macro_ast_viz_debug.rs  lib.rs  logger.rs  misc.rs  utils.rs
macros/src/: main.rs
macros/src/utils/: manager_of_things.rs  manager_of_things_async.rs  mod.rs
macros/tests/: arbitrary_self_type.rs  basic_procedural_macros_test.rs  decl_gen_dsl.rs  decl_gen_lambda.rs  decl_gen_struct_1.rs  decl_gen_struct_2.rs  decl_gen_unwrap.rs  manager_of_things_async_test.rs  manager_of_things_test.rs  test_attribute_macro_logger.rs  test_derive_macro_builder.rs  test_derive_macro_describe.rs  test_fn_macro_ast_viz_debug.rs  test_fn_macro_custom_syntax.rs  test_proc_basic.rs  test_view_token_stream.rs
macros/tests/decl/: decl_gen_dsl.rs  decl_gen_lambda.rs  decl_gen_my_vec.rs  decl_gen_struct_1.rs  decl_gen_struct_2.rs  decl_gen_unwrap.rs  main.rs  manager_of_things_test.rs
pty_cargo_build_progress_osc_codes/: Cargo.toml  README.md  task_test_pty.md
rtelnet/: Cargo.toml  TODO.todo
rtelnet/src/: main.rs
rust-book/: Cargo.toml  README.md  cargo-all.fish  cargo-check-and-watch.fish  cargo-doc.fish  cargo-one.fish  cargo-watch-one-test.fish  rustfmt.toml
rust-book/notebooks/: http-client.restbook  rust-scratch.github-issues
rust-book/src/: color_text.rs  data_structures.rs  enum_variants.rs  guessing_game.rs  hello_world.rs  lib.rs  main.rs  simple_strings.rs  strings.rs  structs.rs  tty.rs  type_utils.rs  variables.rs
rust-book/src/basics/: control_flow.rs  enum_variants.rs  error_handling.rs  mod.rs  ownership.rs  structs.rs  variables.rs
rust-book/src/concurrency/: message_passing.rs  mod.rs  shared_state.rs  threads.rs
rust-book/src/data_structures/: hashmap.rs  id.rs  mod.rs  strings.rs  (+6 more)
rust-book/tests/: integration_test.rs  tree_memory_arena_test.rs  utils_test.rs
rust-grep-cli/: Cargo.toml  README.md  cargo-run-watch.fish
rust-grep-cli/src/: command_builder.rs  graphemes.rs  grep.rs  grep_command_builder.rs  main.rs  piped_grep.rs  piped_grep_command_builder.rs  tty_utils.rs
rust-grep-cli/tests/: sample_test.rs
sql/: Cargo.toml  README.md  TODO.todo  build.rs  diesel.toml  diesel_setup.fish
sql/src/: lib.rs  main.rs  rw_files.rs  schema.rs  structs_and_strings.rs
tcp-api-server/: .$main_diagram.bkp  .gitignore  Cargo.toml  README.md  TODO.todo  compose.yaml  main_diagram
tcp-api-server/kv_db_folder/: db  snap.00000000000000C4
tcp-api-server/src/: clap_args.rs  client_task.rs  data.rs  kv.rs  lib.rs  main.rs  progress_bar.rs  protocol.rs  server_task.rs  tracing_setup.rs  utils.rs
tcp-server-netcat-client/: Cargo.toml  README.md  TODO.todo
tcp-server-netcat-client/src/: main.rs
tls/: Cargo.toml  README.md  README_alt.md  rustc-ice-2024-11-25T16_35_15-3712609.txt  rustc-ice-2024-11-25T16_35_15-3712610.txt  rustc-ice-2024-11-25T16_35_17-3712734.txt  rustc-ice-2024-11-25T16_35_17-3712735.txt
tls/certs/: ca-config.json  ca-csr.json  gen-certs.fish  get-cfssl-binaries.fish  server.json
tls/src/: common_io.rs  lib.rs  net_io.rs  scripting.rs  tls.rs
tokio/: Cargo.toml  README.md
tokio-uring/: Cargo.toml  README.md
tokio-uring/src/: main.rs  readfile.rs  socketserver.rs
tokio/src/: async_middleware.rs  lib.rs  main.rs  middleware.rs  my_middleware.rs
tokio/tests/: sample_test.rs
tty/: Cargo.toml  README.md
tty/src/: async_command_exec.rs  async_command_exec_1.rs  async_command_exec_2.rs  async_command_exec_2_1.rs  async_command_exec_3.rs  async_command_exec_4.rs  async_command_exec_5.rs  lib.rs  procspawn.rs  procspawn_ipc_channel.rs  receive_signal.rs  send_and_receive_signal.rs
tty/tty_reading/: The TTY demystified.html
tui-layout-crossterm/: Cargo.toml  README.md  TODO  cargo-watch-macro-expand-one-test.fish  log.fish  log.txt  run.fish
tui-layout-crossterm/src/: crossterm_mod.rs  file_logging.rs  lib.rs  main.rs  module_crossterm.rs  module_log.rs
tui-layout-crossterm/tests/: test_bitmask.rs  test_box_canvas.rs  test_canvas.rs  test_dimens.rs  test_layout_base.rs  test_style.rs  test_temp.rs
typestate-pattern/: Cargo.toml  README.md
typestate-pattern/src/: eg_1_http_response.rs  ex1.rs  ex2.rs  ex3.rs  ex3_1.rs  main.rs
(+318 files in other folders)
