[package]
name = "address_book_with_redux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "address_book_with_redux"
path = "src/main.rs"

[lib]
name = "address_book_with_redux_lib"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
tokio = { version = "1.17.0", features = ["full"] }

# HTTP Client.
reqwest = { version = "0.11.10", features = ["json"] }

# Serde: https://github.com/serde-rs/serde,
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Chrono & Serde: https://docs.rs/chrono/latest/chrono/index.html
chrono = { version = "0.4.19", features = ["serde", "rustc-serialize"] }

# Get the latest version of r3bl_rs_utils from local fs and not github.
r3bl_rs_utils = { version = "*", path = "../../r3bl-rs-utils" }

# https://crates.io/crates/async-trait
async-trait = "0.1.53"
