[package]
name = "clap"
authors = ["Nazmul Idris"]
version = "0.1.0"
edition = "2021"
description = "An exploration of clap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Tokio.
tokio = { version = "1.39.2", features = ["full"] }

# Latest r3bl_rs_utils_core.
r3bl_rs_utils_core = { git = "https://github.com/r3bl-org/r3bl-open-core" }
r3bl_tui = { git = "https://github.com/r3bl-org/r3bl-open-core" }

# CLI argument parser.
clap = { version = "4.5.11", features = ["derive"] }

# serde-json
serde_json = "1.0.121"
