[package]
name = "graphemes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seshat-unicode = "*"
unicode-width = "0.1.9"
unicode-segmentation = "1.9.0"
crossterm = "0.24.0"

# Latest r3bl_rs_utils.
r3bl_rs_utils = { version = "*", path = "../../r3bl_rs_utils" }
