[package]
name = "graphemes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seshat-unicode = "*"
unicode-width = "0.1.13"
unicode-segmentation = "1.11.0"
crossterm = "0.27.0"

# Latest r3bl_rs_utils.
r3bl_rs_utils_core = { git = "https://github.com/r3bl-org/r3bl-open-core" }
miette = { version = "7.2.0", features = ["fancy"] }
pretty_assertions = "1.4.0"
