[package]
name = "kv_example"
version = "0.1.0"
edition = "2021"

default-run = "kv"

[dependencies]
# Crossterm.
crossterm = { version = "0.27.0" }

# Random numbers.
rand = { version = "0.8.5" }

# Serde for serialization and deserialization support.
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111" }

# Convert Rust structs to and from binary representation.
bincode = { version = "1.3.3" }

# Key Value store that can be used to store JSON or bincode encoded values. `kv` is built
# on top of `sled` which currently does not support access across multiple processes.
kv = { version = "0.24.0", features = ["json-value", "bincode-value"] }

# Key Value store similar to `kv`, but written by Mozilla, and safe for use across
# multiple processes. It also supports `bincode` just like `kv`.
rkv = { version = "0.19.0" }