[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "my_lib"
path = "src/lib.rs"

[dependencies]
# Add a new library crate for macros.
# https://www.reddit.com/r/rust/comments/4lgb2o/newbie_question_multiple_library_crates_in_a/
my_proc_macros_lib = { path = "my_proc_macros_lib"}
