[package]
name = "pty_cargo_build_progress_osc_codes"
version = "0.1.0"
edition = "2024"

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
portable-pty = "0.9.0"
tokio = { version = "1.47.1", features = ["full"] }
strip-ansi-escapes = "0.2"

[[bin]]

name = "simple"
path = "src/bin/simple.rs"

[[bin]]
name = "real"
path = "src/bin/real.rs"
