[package]
name = "rtelnet"
version = "0.1.0"
edition = "2021"
about = "A simple Rust telnet clone that uses only TCP"
authors = ["Nazmul Idris <idris@developerlife.com>"]

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
femme = { version = "2.2.1" }
log = { version = "0.4.20" }
r3bl_tui = { version = "0.5.1" }
r3bl_ansi_color = { version = "0.6.9" }
