[package]
name = "sql"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rusqlite_ex"
path = "src/bin/rusqlite_ex.rs"

[[bin]]
name = "diesel_sqlite_ex"
path = "src/bin/diesel_sqlite_ex.rs"

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
miette = { version = "7.2.0", features = ["fancy"] }
r3bl_core = "0.10.0"
petname = "2.0.2"
crossterm = { version = "0.28.1", features = ["event-stream"] }
