[package]
name = "sql"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rusqlite_ex"
path = "src/bin/rusqlite_ex.rs"

[[bin]]
name = "diesel_sqlite_ex"
path = "src/bin/diesel_sqlite_ex.rs"

[dependencies]
r3bl_core = "0.10.0"

crossterm = { version = "0.28.1", features = ["event-stream"] }

serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"

miette = { version = "7.2.0", features = ["fancy"] }

petname = "2.0.2"

rusqlite = { version = "0.32.1", features = ["bundled"] }

diesel = { version = "2.2.4", features = [
  # For SQLite support.
  "sqlite",
  # The enables returning clauses for SQLite 3.35 and later.
  "returning_clauses_for_sqlite_3_35",
  # For timestamp support.
  "chrono",
] }

# For SQL timestamp col type support.
chrono = "0.4"

# For automatic migrations.
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
