[package]
name = "tls"
version = "0.1.0"
edition = "2021"

# Mark the `check-certs` binary as the default.
default-run = "check-certs"

[[bin]]
name = "check-certs"
path = "src/bin/check-certs.rs"

[[bin]]
name = "gen-certs"
path = "src/bin/gen-certs.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
# TLS dependencies.
rustls = "0.23.20"
tokio-rustls = "0.26.1"
rustls-pemfile = "2.2.0"

# Tokio dependencies.
tokio = { version = "1.42.0", features = ["full"] }

# Tokio tracing dependencies.
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-core = "0.1.33"
chrono = "0.4.39"
textwrap = "0.16.1"

# Error handling.
miette = "7.4.0"
thiserror = "2.0.6"

# Terminal color output.
crossterm = "0.28.1"

# Strum dependencies.
strum = "0.26.3"
strum_macros = "0.26.4"

# R3BL awesomeness.
futures-util = "0.3.31"                                                             # Async streams.
r3bl_macro = "0.10.0"                                                               # TUI style macro.
r3bl_ansi_color = "0.7.0"
r3bl_core = { git = "https://github.com/r3bl-org/r3bl-open-core", rev = "504d4d4" } # Stable, not released.
# r3bl_core = { path = "/home/nazmul/github/r3bl-open-core/core" } # Unstable, active development.
r3bl_test_fixtures = { git = "https://github.com/r3bl-org/r3bl-open-core", rev = "504d4d4" } # Stable, not released.
# r3bl_test_fixtures = { path = "/home/nazmul/github/r3bl-open-core/test_fixtures" } # Unstable, active development.

# HTTP client library.
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"

# Run tests in serial.
serial_test = "3.2.0"

[dev-dependencies]
strip-ansi = "0.1.0" # For tracing_support.
