[package]
name = "tokio_example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tokio_example"
path = "src/main.rs"

[lib]
name = "tokio_example_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
rand = "*"