[package]
name = "tui-layout-crossterm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Logging.
log = "0.4.16"
simplelog = "0.12.0"
time = "0.3.9"

# Crossterm & EventStream support.
crossterm = { version = "0.23.2", features = ["event-stream"] }
futures-util = "0.3.21"
paste = "1.0.7"

# Tokio.
tokio = { version = "1.17.0", features = ["full"] }

# https://github.com/serde-rs/serde.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# https://crates.io/crates/async-trait.
async-trait = "0.1.53"

# Latest r3bl_rs_utils.
r3bl_rs_utils = { version = "*", path = "../../r3bl-rs-utils" }
r3bl_rs_utils_core = { version = "*", path = "../../r3bl-rs-utils/core" }

# Bitflags.
bitflags = "1.3.2"

# Readonly.
readonly = "0.2.1"
